# autoconf-static-dync-library

./: .gitignore  Jenkinsfile  README.md
dynclib/: .gitignore  Makefile.am  configure.ac  usercommondync.pc  usercommondync.pc.in  userloginapp.c
include/: usercommon.h  userlogin.h  userloginapp.h
lib/: .gitignore  Makefile.am  configure.ac  usercommon.c
src/: Makefile.am  README.md  configure.ac  userlogin.c
